# RPG-Character-Builder

RPG Character Builder/: CMakeLists.txt  CharacterClass.cpp  CharacterClass.h  ClassTypeClass.cpp  ClassTypeClass.h  ItemList.h  RaceClass.cpp  RaceClass.h  Utility.cpp  Utility.h  main.cpp
RPG Character Builder/inc/: ClassTypeClass.h  ItemList.h  RaceClass.h  Utility.h
